third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/access_control/negation.exp
processed 6 tasks

task 0 'publish'. lines 1-24:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ TEMPFILE:5:35
  │
5 │         move_to(s, R{value: true});
  │                                   ^



task 2 'run'. lines 28-28:
return values: true

task 3 'run'. lines 30-30:
return values: true

task 4 'run'. lines 32-32:
Error: Function execution failed with VMError: {
    message: not allowed to perform `reads 0x42::test::R(@0x1)`,
    major_status: ACCESS_DENIED,
    sub_status: None,
    location: 0x42::test,
    indices: [],
    offsets: [(FunctionDefinitionIndex(1), 1)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}

task 5 'run'. lines 34-34:
Error: Function execution failed with VMError: {
    message: not allowed to perform `reads 0x42::test::R(@0x1)`,
    major_status: ACCESS_DENIED,
    sub_status: None,
    location: 0x42::test,
    indices: [],
    offsets: [(FunctionDefinitionIndex(2), 1)],
    exec_state: Some(ExecutionState { stack_trace: [] }),
}
